--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "cookie-parser": "^1.4.7",
     "express-handlebars": "^5.3.5",
     "hbs": "^4.2.0",
     "mysql2": "^3.14.2",
